# bento

./: .bento_secrets  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  bento.toml
src/: config.rs  lib.rs  main.rs  storage.rs  types.rs  webui.rs
src/api/: auth.rs
src/storage/: error.rs  macros.rs  memstore.rs  redb_projectstore.rs  redbstore.rs
src/webui/: cookies.rs  home.rs  icons.rs  login.rs  login_screen.rs  screen_home.rs  screen_login.rs
src/webui/styles/: _vars.scss  main.scss
