[package]
name = "foundry"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = "0.8.4"
axum-client-ip = "1.1.3"
base64 = "0.22.1"
papaya = { version = "0.2.3", features = ["serde"] }
rand = { version = "0.9.2", features = ["os_rng"] }
serde = { version = "1.0.222", features = ["derive"] }
thiserror = "2.0.16"
time = { version = "0.3.43", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "rt"] }
tower-http = { version = "0.6.6", features = ["compression-gzip", "compression-br", "decompression-br", "decompression-gzip"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
