[package]
name = "bento"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"], optional = true }
axum = { version = "0.8.7", optional = true }
axum-client-ip = { version = "1.1.3", optional = true }
axum-extra = { version = "0.12.2", features = ["cookie", "cookie-private"], optional = true }
base64 = { version = "0.22.1" }
console_error_panic_hook = { version = "0.1.7", optional = true }
leptos = { version = "0.8.12", features = ["nightly"] }
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = "0.8.5"
leptos_router = { version = "0.8.9", features = ["nightly"] }
getrandom = { version = "0.2", features = ["js"] }
papaya = { version = "0.2.3", features = ["serde"], optional = true }
rand = { version = "0.9.2", features = ["os_rng"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.17" }
time = { version = "0.3.44", features = ["serde", "formatting", "local-offset"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "rt", "time"], optional = true }
toml = { version = "0.9.8", optional = true }
tower-http = { version = "0.6.6", features = ["compression-gzip", "compression-br", "decompression-br", "decompression-gzip"], optional = true }
tracing = { version = "0.1.41", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v7", "js"] }
wasm-bindgen = { version = "0.2", optional = true }
redb = { version = "3.1.0", optional = true }
bincode = { version = "2.0.1", features = ["serde"], optional = true }

[features]
default = ["ssr", "hydrate"]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:argon2",
    "dep:papaya",
    "dep:rand",
    "dep:tower-http",
    "dep:axum",
    "dep:tokio",
    "dep:toml",
    "dep:leptos_axum",
    "dep:axum-extra",
    "dep:redb",
    "dep:bincode",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum-client-ip",
]
rest-api = []

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "bento"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/<crate>.css
style-file = "src/webui/styles/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "src/webui/public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
